...
        ),
      ),
    downloadStates =
      MutableStateFlow(
        mapOf(
          previewLanguage("ar", "Arabic") to DownloadState(isDownloading = true, totalSize = 10, downloaded = 5),
          previewLanguage("sq", "Albanian") to DownloadState(isCancelled = true),
        ),
      ),
  )

@Composable
@Preview
...
